# hc3d

./: .gitignore  hc3d.cabal  stack.yaml
app/: MainHexUtil.hs
scripts/: fetch-c3d.sh
src/Data/HC3D/: Binary.hs  HexUtil.hs  Parse.hs  Types.hs
test/: Spec.hs
test/Data/HC3D/: ParseSpec.hs
