name:                hc3d
version:             0.1.0.0
synopsis:            C3D file reader in Haskell
description:         Please see README.md
homepage:            http://github.com/lancelet/hc3d
license:             BSD3
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
copyright:           2016 Jonathan Merritt
category:            Data
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Lib
                     , Data.HC3D.Binary
                     , Data.HC3D.HexUtil
                     , Data.HC3D.Parse
                     , Data.HC3D.Types
  build-depends:       base >= 4.7 && < 5
                     , base16-bytestring
                     , bytestring
                     , cereal
                     , fixed-vector
                     , formatting
                     , text
                     , vector

executable hexutil
  hs-source-dirs:      app
  main-is:             MainHexUtil.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hc3d
                     , bytestring
                     , optparse-applicative
                     , text

test-suite hc3d-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , cereal
                     , hc3d
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck

source-repository head
  type:     git
  location: https://github.com/lancelet/hc3d.git
